@@ -1,8 +1,9 @@
 ensmallen (2.17.0-2) UNRELEASED; urgency=medium
 
   * bump policy
+  * build ensmallen_tests in debian/rules (closes: #990927)
 
- -- Barak A. Pearlmutter <bap@debian.org>  Thu, 26 Aug 2021 11:41:55 +0100
+ -- Barak A. Pearlmutter <bap@debian.org>  Thu, 26 Aug 2021 11:49:10 +0100
 
 ensmallen (2.17.0-1) unstable; urgency=medium
 
